--- a/AngularPlaybookService/AngularPlaybookService/Web.config
+++ b/AngularPlaybookService/AngularPlaybookService/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
@@ -10,7 +10,8 @@
   </configSections>
 	<connectionStrings>
 		<add name="AngularPlaybookEntities" connectionString="metadata=res://*/AngularPlaybookModel.csdl|res://*/AngularPlaybookModel.ssdl|res://*/AngularPlaybookModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=STEINS-GATE\SQLEXPRESS01;initial catalog=AngularPlaybook;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+    <add name="AngularPlaybookEntities1" connectionString="metadata=res://*/AngularPlaybookModel.csdl|res://*/AngularPlaybookModel.ssdl|res://*/AngularPlaybookModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CI-ASHOCK-82020;initial catalog=AngularPlaybook;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
