--- a/AngularPlaybookService/AngularPlaybookService/bin/AngularPlaybookService.dll.config
+++ b/AngularPlaybookService/AngularPlaybookService/bin/AngularPlaybookService.dll.config
@@ -11,6 +11,7 @@
 	<connectionStrings>
 		<add name="AngularPlaybookEntities" connectionString="metadata=res://*/AngularPlaybookModel.csdl|res://*/AngularPlaybookModel.ssdl|res://*/AngularPlaybookModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=STEINS-GATE\SQLEXPRESS01;initial catalog=AngularPlaybook;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="AngularPlaybookEntities1" connectionString="metadata=res://*/AngularPlaybookModel.csdl|res://*/AngularPlaybookModel.ssdl|res://*/AngularPlaybookModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CI-ASHOCK-82020;initial catalog=AngularPlaybook;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -23,7 +24,14 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
-
+    <handlers>
+      <remove name="WebDAV" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" resourceType="Unspecified" requireAccess="Script" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+    <modules>
+      <remove name="WebDAVModule"/>
+    </modules>
 	  <httpProtocol>
 		  <customHeaders>
 			  <add name="Access-Control-Allow-Origin" value="*" />
