--- a/AngularPlaybookService/AngularPlaybookService/AngularPlaybookService.csproj
+++ b/AngularPlaybookService/AngularPlaybookService/AngularPlaybookService.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TickerController.cs" />
+    <Compile Include="Controllers\TransactionController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
